# AI-ML

./: .gitignore  README.md
.github/workflows/: daily_signal.yml
AI-ML-midterm/: .gitignore  DESCRIPTION.md  PRD.md  README.md  TRD.md  backtest.py  data.py  discord_notify.py  features.py  main_app.py  model_torch.py  pyproject.toml  regime.py  signal_history.csv  strategy_kelly.py  strategy_markowitz.py  today_signal.py
final-term/: DESIGN_cost_card_system.md  PRD.md  README.md  TRD.md  plan.md
final-term/backend/: .env.example  balance_sim.py  cards.py  config.py  emh.py  emh_check.py  engine.py  etf.py  events.py  main.py  narration.py  requirements-dev.txt  requirements.txt  verify.html
final-term/backend/data/: event_study.json  event_study.py  fetch_etf.py  market_stats.json  policy_sector_mapping.md  requirements.txt  validate_sensitivity.py  validation_report.json
final-term/backend/fixtures/: action_response.json  new_game.json
final-term/backend/tests/: test_contracts.py
final-term/frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
final-term/frontend/app/: globals.css  layout.tsx  page.tsx
final-term/frontend/lib/: api.ts  (+2 more)
v1-backup/: app.py  config.py  engine.py  narration.py  requirements.txt
v1-backup/.streamlit/: config.toml
week1/: hw1.md  hw2.md  linear_regression.py  run_results.txt
week11/: 05_h2plus.py  06_helium.py  README.md  plan.md  solution_approach.md
week2/: week2_submit.txt  week2_summary.md
week3/: PRD.md  TRD.md  week3_app.py
week4/: PRD.md  TRD.md  week4_app.py
week9/: README.md
(+16 files in other folders)
